# secure-share

./: Cargo.toml  LICENSE  README.md  config.yml  contributing.md  dev_build.sh  share.sh
.cargo/: config.toml
.github/workflows/: lint.yml  release.yml
npm/: README.md  binary.js  getBinary.js  package-lock.json  package.json  run.test.js  uninstall.js
share/: Cargo.toml
share/src/: config.rs  logger.rs  main.rs
share/src/database/: mod.rs  peer.rs
share/src/handlers/: security.rs
share/src/item/: mod.rs
share/src/network/: hole_puncher.rs  mod.rs  request.rs
src/: client.rs  config.rs  hole_puncher.rs  logger.rs  main.rs  secret.rs  server.rs
src/common/: mod.rs
src/handlers/: mod.rs  security.rs
src/item/: item_file.rs  item_message.rs  mod.rs  secret.rs
src/network/: hole_puncher.rs
xtask/: Cargo.toml  cargo-test-21643-511720400827883107_0.profraw
xtask/src/: main.rs
