[package]
name = "scs"
version = "0.1.2"
edition = "2021"
default-run = "scs"
description = "Open source p2p share for devs to share anything with teammates across machines securely."
license = "Apache-2.0"
homepage = "https://github.com/Onboardbase/secure-share"
documentation = "https://github.com/Onboardbase/secure-share#secure-share--"
repository = "https://github.com/Onboardbase/secure-share"
keywords = ["p2p", "sharing", "security"]
categories = ["development-tools"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["rt", "rt-multi-thread", "time", "macros", "sync"] }
anyhow = "1.0.22"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.11", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
clap = { version = "4.3.10", features = ["derive"] }
serde_json = "1.0.100"
serde = { version = "1.0.166", features = ["derive"] }
futures = "0.3.28"
futures-timer = "3.0"
libp2p = { version = "0.52.1", features = ["async-std", "dns", "dcutr", "identify", "macros", "noise", "ping", "relay", "rendezvous", "tcp", "tokio", "yamux"] }
rand = "0.8"
request_response = {version = "0.25.0", package = "libp2p-request-response", features = ["json"] }
directories-next = "2.0.0"
tracing-appender = "0.2.2"
serde_yaml = "0.9.24"
rusqlite = { version = "0.29.0", features = ["bundled"] }
time = "0.3.25"

[dev-dependencies]
assert_fs = "1.0.13"
predicates = "3.0.3"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]
